--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>E-commerce Project</projectName>
+                            <projectName>Delta Project</projectName>
                             
                             <!-- output directory for the generated report -->
                             <outputDirectory>${project.build.directory}/pretty-html-report</outputDirectory>
